terraform/vpc.tf

# Create a new VPC for the k3s cluster
resource "aws_vpc" "main" {
	cidr_block = "10.0.0.0/16"
	tags = { Name = "k3s-vpc" }
}



# Create a public subnet in the VPC
resource "aws_subnet" "public" {
	vpc_id                  = aws_vpc.main.id
	cidr_block              = "10.0.1.0/24"
	map_public_ip_on_launch = true
	availability_zone       = data.aws_availability_zones.available.names[0]
}



# Get a list of available AWS availability zones
data "aws_availability_zones" "available" {}



# Attach an Internet Gateway to the VPC for internet access
resource "aws_internet_gateway" "gw" {
	vpc_id = aws_vpc.main.id
}



# Create a route table for the public subnet
resource "aws_route_table" "r" {
	vpc_id = aws_vpc.main.id

	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.gw.id
	}
}



# Associate the route table with the public subnet
resource "aws_route_table_association" "a" {
	subnet_id      = aws_subnet.public.id
	route_table_id = aws_route_table.r.id
}
